--- a/UI2/Infant.ui
+++ b/UI2/Infant.ui
@@ -6,9 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1444</width>
-    <height>822</height>
+    <width>1920</width>
+    <height>1080</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <pointsize>14</pointsize>
+   </font>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -18,9 +23,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>30</y>
-      <width>671</width>
-      <height>101</height>
+      <y>40</y>
+      <width>881</width>
+      <height>91</height>
      </rect>
     </property>
     <property name="minimumSize">
@@ -48,7 +53,7 @@
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>651</width>
+       <width>861</width>
        <height>71</height>
       </rect>
      </property>
@@ -131,190 +136,24 @@
      </layout>
     </widget>
    </widget>
-   <widget class="QLabel" name="recognition_results_label">
-    <property name="geometry">
-     <rect>
-      <x>700</x>
-      <y>270</y>
-      <width>361</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>331</width>
-      <height>41</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <family>黑体</family>
-      <pointsize>14</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>视频识别结果</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="statistics_results_label">
-    <property name="geometry">
-     <rect>
-      <x>700</x>
-      <y>40</y>
-      <width>361</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>331</width>
-      <height>41</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <family>黑体</family>
-      <pointsize>14</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>识别结果概率分布</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="data_statistic_show">
-    <property name="geometry">
-     <rect>
-      <x>700</x>
-      <y>100</y>
-      <width>361</width>
-      <height>131</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QListWidget" name="recognition_result">
-    <property name="geometry">
-     <rect>
-      <x>700</x>
-      <y>320</y>
-      <width>361</width>
-      <height>171</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_video">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>150</y>
-      <width>651</width>
-      <height>571</height>
+      <x>30</x>
+      <y>220</y>
+      <width>860</width>
+      <height>484</height>
      </rect>
     </property>
     <property name="text">
      <string/>
-    </property>
-   </widget>
-   <widget class="QListWidget" name="audiolist_show">
-    <property name="geometry">
-     <rect>
-      <x>1070</x>
-      <y>320</y>
-      <width>341</width>
-      <height>171</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="auidoplot_show">
-    <property name="geometry">
-     <rect>
-      <x>1070</x>
-      <y>100</y>
-      <width>341</width>
-      <height>131</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="recognition_results_label_2">
-    <property name="geometry">
-     <rect>
-      <x>1070</x>
-      <y>270</y>
-      <width>341</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>331</width>
-      <height>41</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <family>黑体</family>
-      <pointsize>14</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>音频识别结果</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="statistics_results_label_2">
-    <property name="geometry">
-     <rect>
-      <x>1070</x>
-      <y>40</y>
-      <width>341</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>331</width>
-      <height>41</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <family>黑体</family>
-      <pointsize>14</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>音频统计结果</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>530</y>
+      <x>1060</x>
+      <y>790</y>
       <width>701</width>
       <height>211</height>
      </rect>
@@ -325,6 +164,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -340,6 +180,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -355,6 +196,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -370,6 +212,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -385,6 +228,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -400,6 +244,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -415,6 +260,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -430,6 +276,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -445,6 +292,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -460,6 +308,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
          <weight>50</weight>
          <bold>false</bold>
         </font>
@@ -477,6 +326,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -492,6 +342,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -507,6 +358,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -522,6 +374,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -537,6 +390,7 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
@@ -552,10 +406,290 @@
        <property name="font">
         <font>
          <family>黑体</family>
+         <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>呼吸率：</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="gridLayoutWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>940</x>
+      <y>10</y>
+      <width>921</width>
+      <height>771</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label_19">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>心跳</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QGraphicsView" name="xintiao_graph"/>
+     </item>
+     <item row="3" column="0">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>40</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>30</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>20</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="3" column="3">
+      <widget class="QGraphicsView" name="huxilv_graph"/>
+     </item>
+     <item row="5" column="1">
+      <widget class="QGraphicsView" name="wendu_graph"/>
+     </item>
+     <item row="2" column="3">
+      <widget class="QLabel" name="label_22">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>呼吸率</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QLabel" name="label_20">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>体温</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="2">
+      <layout class="QVBoxLayout" name="verticalLayout_4">
+       <item>
+        <widget class="QLabel" name="label_10">
+         <property name="text">
+          <string>40</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_11">
+         <property name="text">
+          <string>30</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_12">
+         <property name="text">
+          <string>20</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="5" column="3">
+      <widget class="QGraphicsView" name="pingfen_graph"/>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLabel" name="label_21">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>血糖</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QGraphicsView" name="tiwen_graph"/>
+     </item>
+     <item row="3" column="2">
+      <layout class="QVBoxLayout" name="verticalLayout_5">
+       <item>
+        <widget class="QLabel" name="label_13">
+         <property name="text">
+          <string>40</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_14">
+         <property name="text">
+          <string>30</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_15">
+         <property name="text">
+          <string>20</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="5" column="0">
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QLabel" name="label_7">
+         <property name="text">
+          <string>40</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_8">
+         <property name="text">
+          <string>30</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>20</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="1" column="2">
+      <layout class="QVBoxLayout" name="verticalLayout_6">
+       <item>
+        <widget class="QLabel" name="label_16">
+         <property name="text">
+          <string>40</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_17">
+         <property name="text">
+          <string>30</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_18">
+         <property name="text">
+          <string>20</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="3" column="1">
+      <widget class="QGraphicsView" name="xuetang_graph"/>
+     </item>
+     <item row="1" column="0">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>40</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>30</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>20</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLabel" name="label_23">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>温度</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="3">
+      <widget class="QLabel" name="label_24">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>评分</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -570,8 +704,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1444</width>
-     <height>23</height>
+     <width>1920</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
